Fixed the alignment of title

--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ footer {
     text-align: center;
 }
 
-/*phone*/
+/*スマホ画面用*/
 @media screen and (max-width: 768px) {
     body {
         font-size: 14px !important;
@@ -304,16 +304,19 @@ footer {
       align-items: flex-start;
     }
 
+    /*ロゴ*/
     .logo {
         flex-direction: column;
         align-items: flex-start;
-        gap: 8px;
-        width: 100%;
-    }
+      }
     
-    .logo-text {
-        align-items: flex-start;
-    }
+      .logo-text h1 {
+        font-size: 20px;
+      }
+    
+      .tel {
+        font-size: 14px;
+      }
 
     header nav ul {
       flex-direction: column;
@@ -321,19 +324,31 @@ footer {
       padding: 0;
       margin-top: 1rem;
     }
-
-    .tel {
-        font-size: 16px;
-        margin-top: 2px;
-    }
     
     .logo-img {
-        height: 70px;
-        width: 70px;
+        height: 50px;
+        width: 50px;
     }
     
     .logo-text h1 {
         font-size: 22px;
+    }
+  
+    /*リハビリタイトルとテキストサイズ調整 */
+    #rihab h2 {
+        font-size: 20px;
+        text-align: center;
+        margin-bottom: 10px;
+    }
+  
+    .rehab-card h3 {
+        font-size: 18px;
+    }
+  
+    .rehab-card p,
+    .symptom-title,
+    .symptom-list li {
+        font-size: 14px;
     }
   
     .rehab-container {
